# kbtz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: architecture.md  data-model.md
docs/plans/: 2026-03-01-data-model-cleanup.md  2026-03-01-unify-tree-view.md  2026-03-07-per-task-agent-types-design.md
docs/superpowers/plans/: 2026-03-22-kbtz-web.md
docs/superpowers/specs/: 2026-03-22-kbtz-web-design.md
kbtz/: Cargo.toml
kbtz-council/: Cargo.toml  README.md.generated
kbtz-council/docs/: design-v2.md  design.md  plan.md  test-plan.md
kbtz-council/prompts/: concierge-system.md  implementation.md  leader-system.md  stakeholder.md
kbtz-council/src/: git.rs  global.rs  job.rs  lib.rs  lifecycle.rs  main.rs  mcp.rs  orchestrator.rs  project.rs  prompt.rs  session.rs  step.rs  stream.rs  util.rs
kbtz-council/src/tui/: dashboard.rs  input.rs  leader.rs  mod.rs  stream_view.rs
kbtz-council/tests/: git_test.rs  global_test.rs  lifecycle_test.rs  project_test.rs  stream_test.rs
kbtz-mux/: Cargo.toml
kbtz-mux/src/: app.rs  lifecycle.rs  main.rs  prompt.rs  session.rs  skill.rs  tree.rs
kbtz-orchestrator/: Cargo.toml
kbtz-orchestrator/docs/: plan.md
kbtz-orchestrator/src/: main.rs
kbtz-tmux/: Cargo.toml
kbtz-tmux/src/: lib.rs  lifecycle.rs  main.rs  orchestrator.rs  tmux.rs
kbtz-tmux/tests/: lifecycle_test.rs
kbtz-web/: Cargo.toml
kbtz-web/src/: auth.rs  lib.rs  protocol.rs  session_manager.rs  task_tree.rs  ws_messages.rs
kbtz-web/tests/: integration_test.rs
kbtz-workspace/: Cargo.toml
kbtz-workspace-core/: Cargo.toml
kbtz-workspace-core/src/: lib.rs  prompt.rs
kbtz-workspace/docs/: rendering-rationale.md  scrollback-design.md  session-rendering.md
kbtz-workspace/src/: app.rs  backend.rs  config.rs  hooks.rs  lib.rs  lifecycle.rs  main.rs  prompt.rs  protocol.rs  scrollback.rs  session.rs  shepherd_session.rs  tree.rs
kbtz-workspace/tests/: shepherd_integration.rs
kbtz/src/: cli.rs  config.rs  db.rs  debug_log.rs  lib.rs  main.rs  model.rs  ops.rs  output.rs  paths.rs  ui.rs  validate.rs  watch.rs
kbtz/src/tui/: app.rs  editor.rs  event.rs  mod.rs  tree.rs
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: mux-status.sh  notify.sh  pane-title.sh  session-env.sh  task-create-reminder.sh  workspace-status.sh
plugin/skills/kbtz-basics/: SKILL.md
plugin/skills/worker/: SKILL.md
src/: cli.rs  db.rs  main.rs  model.rs  ops.rs  output.rs  validate.rs  watch.rs
src/tui/: app.rs  editor.rs  event.rs  mod.rs  tree.rs
