[package]
name = "kbtz-council"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
portable-pty = "0.9"
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
vt100 = "0.16"

[dev-dependencies]
tempfile = "3"
