[package]
name = "kbtz-workspace"
version = "0.1.0"
edition = "2021"
description = "Terminal workspace manager for kbtz agent sessions"
license = "Apache-2.0"
repository = "https://github.com/virgil-king/kbtz"

[dependencies]
kbtz = { path = "../kbtz" }
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
crossterm = "0.28"
portable-pty = "0.9"
notify = "7"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ctrlc = "3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vt100 = "0.16"

[dev-dependencies]
tempfile = "3"
