[package]
name = "kbtz"
version = "0.1.0"
edition = "2021"
description = "Task tracker for AI agents"
license = "Apache-2.0"
repository = "https://github.com/virgil-king/kbtz"

[lib]
name = "kbtz"
path = "src/lib.rs"

[[bin]]
name = "kbtz"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tempfile = "3"
shlex = "1.3.0"
